--- a/app/src/main/res/layout/activity_all_products.xml
+++ b/app/src/main/res/layout/activity_all_products.xml
@@ -44,6 +44,7 @@
                     app:tint="#888888" />
 
                 <EditText
+                    android:id="@+id/edtSearch"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
