--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -28,6 +28,7 @@
 
 
         <TextView
+            android:id="@+id/txtQty"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -78,7 +79,7 @@
             android:text="Tất cả" />
 
         <TextView
-            android:id="@+id/textViewTotal"
+            android:id="@+id/txtTotal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
